# src/libs/swagger_output.json
@@ -2,8 +2,8 @@
   "openapi": "3.0.0",
   "info": {
     "version": "v1.0.0",
-    "title": "My Tasks",
-    "description": "A simple task management system."
+    "title": "Library",
+    "description": "A simple book reservation system."
   },
   "servers": [
     {
@@ -17,15 +17,31 @@
   ],
   "tags": [
     {
-      "name": "Task",
-      "description": ""
+      "name": "Tasks",
+      "description": "Endpoints related to task management"
     }
   ],
   "paths": {
+    "/ping/": {
+      "get": {
+        "tags": [
+          "Tasks"
+        ],
+        "description": "",
+        "responses": {
+          "400": {
+            "description": "Solicitação Inválida"
+          },
+          "500": {
+            "description": "Erro Interno do Servidor"
+          }
+        }
+      }
+    },
     "/tasks/": {
       "get": {
         "tags": [
-          "Task"
+          "Tasks"
         ],
         "description": "",
         "responses": {
@@ -39,7 +55,7 @@
       },
       "post": {
         "tags": [
-          "Task"
+          "Tasks"
         ],
         "description": "",
         "responses": {
@@ -55,7 +71,7 @@
     "/tasks/{task_id}": {
       "get": {
         "tags": [
-          "Task"
+          "Tasks"
         ],
         "description": "",
         "parameters": [
@@ -79,7 +95,7 @@
       },
       "patch": {
         "tags": [
-          "Task"
+          "Tasks"
         ],
         "description": "",
         "parameters": [
@@ -103,7 +119,7 @@
       },
       "delete": {
         "tags": [
-          "Task"
+          "Tasks"
         ],
         "description": "",
         "parameters": [
@@ -125,22 +141,6 @@
           }
         }
       }
-    },
-    "/ping/": {
-      "get": {
-        "tags": [
-          "Task"
-        ],
-        "description": "",
-        "responses": {
-          "400": {
-            "description": "Solicitação Inválida"
-          },
-          "500": {
-            "description": "Erro Interno do Servidor"
-          }
-        }
-      }
     }
   },
   "components": {
@@ -148,74 +148,272 @@
       "DefaultResponse": {
         "type": "object",
         "properties": {
-          "message": {
+          "type": {
             "type": "string",
-            "example": "message"
+            "example": "object"
+          },
+          "properties": {
+            "type": "object",
+            "properties": {
+              "message": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "message"
+                  }
+                }
+              }
+            }
           }
         }
       },
       "TaskRegister": {
         "type": "object",
         "properties": {
-          "title": {
+          "type": {
             "type": "string",
-            "example": "title"
+            "example": "object"
           },
-          "description": {
-            "type": "string",
-            "example": "description"
+          "required": {
+            "type": "array",
+            "example": [
+              "title",
+              "description",
+              "state"
+            ],
+            "items": {
+              "type": "string"
+            }
           },
-          "state": {
-            "type": "string",
-            "example": "pending"
+          "properties": {
+            "type": "object",
+            "properties": {
+              "title": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "title"
+                  }
+                }
+              },
+              "description": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "description"
+                  }
+                }
+              },
+              "state": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "enum": {
+                    "type": "array",
+                    "example": [
+                      "pending",
+                      "doing",
+                      "done"
+                    ],
+                    "items": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "pending"
+                  }
+                }
+              }
+            }
           }
-        },
-        "required": [
-          "title",
-          "description",
-          "state"
-        ]
+        }
+      },
+      "TaskPatch": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "example": "object"
+          },
+          "properties": {
+            "type": "object",
+            "properties": {
+              "title": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "title"
+                  }
+                }
+              },
+              "description": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "description"
+                  }
+                }
+              },
+              "state": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "enum": {
+                    "type": "array",
+                    "example": [
+                      "pending",
+                      "doing",
+                      "done"
+                    ],
+                    "items": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "doing"
+                  }
+                }
+              }
+            }
+          }
+        }
       },
       "TaskResponse": {
         "type": "object",
         "properties": {
-          "id": {
+          "type": {
             "type": "string",
-            "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
+            "example": "object"
           },
-          "title": {
-            "type": "string",
-            "example": "title"
-          },
-          "description": {
-            "type": "string",
-            "example": "description"
-          },
-          "state": {
-            "type": "string",
-            "example": "pending"
-          },
-          "createdAt": {
-            "type": "string",
-            "example": "year-mouth-day"
+          "properties": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
+                  }
+                }
+              },
+              "title": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "title"
+                  }
+                }
+              },
+              "description": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "description"
+                  }
+                }
+              },
+              "state": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "enum": {
+                    "type": "array",
+                    "example": [
+                      "pending",
+                      "doing",
+                      "done"
+                    ],
+                    "items": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "pending"
+                  }
+                }
+              },
+              "createdAt": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "format": {
+                    "type": "string",
+                    "example": "date"
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "2024-06-01"
+                  }
+                }
+              }
+            }
           }
-        },
-        "required": [
-          "id",
-          "title",
-          "description",
-          "state",
-          "createdAt"
-        ]
+        }
       }
     },
     "parameters": {
-      "IdTaskQuery": {
+      "IdBookQuery": {
         "name": "id",
         "in": "query",
         "schema": {
           "type": "string"
-        }
+        },
+        "required": true
       }
     }
   }
