# src/routes/index.ts
@@ -4,9 +4,9 @@ import taskRoutes from './taskRoutes';
 
 const routes = Router();
 
-routes.use("/tasks", taskRoutes/*
-#swagger.tags=["Task"]
-*/);
 routes.use("/ping", checkRoutes);
+routes.use("/tasks", taskRoutes /*
+  #swagger.tags = ['Tasks']
+*/);
 
 export { routes };
